ACLOCAL_AMFLAGS = -I aclocal

include $(top_srcdir)/automake/compile.am
include $(top_srcdir)/automake/multilib.am

project_lib_LIBRARIES =
TMPINSTALL_FILES =

noinst_LIBRARIES = libcpukit.a

libcpukit_a_SOURCES =
libcpukit_a_SOURCES += dev/i2c/eeprom.c
libcpukit_a_SOURCES += dev/i2c/fpga-i2c-slave.c
libcpukit_a_SOURCES += dev/i2c/gpio-nxp-pca9535.c
libcpukit_a_SOURCES += dev/i2c/i2c-bus.c
libcpukit_a_SOURCES += dev/i2c/i2c-dev.c
libcpukit_a_SOURCES += dev/i2c/sensor-lm75a.c
libcpukit_a_SOURCES += dev/i2c/switch-nxp-pca9548a.c
libcpukit_a_SOURCES += dev/i2c/ti-ads-16bit-adc.c
libcpukit_a_SOURCES += dev/i2c/ti-lm25066a.c
libcpukit_a_SOURCES += dev/i2c/ti-tmp112.c
libcpukit_a_SOURCES += dev/i2c/xilinx-axi-i2c.c
libcpukit_a_SOURCES += dev/serial/sc16is752.c
libcpukit_a_SOURCES += dev/serial/sc16is752-spi.c
libcpukit_a_SOURCES += dev/spi/spi-bus.c
libcpukit_a_SOURCES += dtc/libfdt/fdt_addresses.c
libcpukit_a_SOURCES += dtc/libfdt/fdt.c
libcpukit_a_SOURCES += dtc/libfdt/fdt_empty_tree.c
libcpukit_a_SOURCES += dtc/libfdt/fdt_ro.c
libcpukit_a_SOURCES += dtc/libfdt/fdt_rw.c
libcpukit_a_SOURCES += dtc/libfdt/fdt_strerror.c
libcpukit_a_SOURCES += dtc/libfdt/fdt_sw.c
libcpukit_a_SOURCES += dtc/libfdt/fdt_wip.c
libcpukit_a_SOURCES += libblock/src/bdbuf.c
libcpukit_a_SOURCES += libblock/src/bdpart-create.c
libcpukit_a_SOURCES += libblock/src/bdpart-dump.c
libcpukit_a_SOURCES += libblock/src/bdpart-mount.c
libcpukit_a_SOURCES += libblock/src/bdpart-read.c
libcpukit_a_SOURCES += libblock/src/bdpart-register.c
libcpukit_a_SOURCES += libblock/src/bdpart-sort.c
libcpukit_a_SOURCES += libblock/src/bdpart-write.c
libcpukit_a_SOURCES += libblock/src/blkdev-blkstats.c
libcpukit_a_SOURCES += libblock/src/blkdev.c
libcpukit_a_SOURCES += libblock/src/blkdev-imfs.c
libcpukit_a_SOURCES += libblock/src/blkdev-ioctl.c
libcpukit_a_SOURCES += libblock/src/blkdev-ops.c
libcpukit_a_SOURCES += libblock/src/blkdev-print-stats.c
libcpukit_a_SOURCES += libblock/src/diskdevs.c
libcpukit_a_SOURCES += libblock/src/diskdevs-init.c
libcpukit_a_SOURCES += libblock/src/flashdisk.c
libcpukit_a_SOURCES += libblock/src/ide_part_table.c
libcpukit_a_SOURCES += libblock/src/media.c
libcpukit_a_SOURCES += libblock/src/media-desc.c
libcpukit_a_SOURCES += libblock/src/media-dev-ident.c
libcpukit_a_SOURCES += libblock/src/media-path.c
libcpukit_a_SOURCES += libblock/src/media-server.c
libcpukit_a_SOURCES += libblock/src/nvdisk.c
libcpukit_a_SOURCES += libblock/src/nvdisk-sram.c
libcpukit_a_SOURCES += libblock/src/ramdisk-config.c
libcpukit_a_SOURCES += libblock/src/ramdisk-driver.c
libcpukit_a_SOURCES += libblock/src/ramdisk-init.c
libcpukit_a_SOURCES += libblock/src/ramdisk-register.c
libcpukit_a_SOURCES += libblock/src/sparse-disk.c
libcpukit_a_SOURCES += libcrypt/crypt.c
libcpukit_a_SOURCES += libcrypt/crypt-md5.c
libcpukit_a_SOURCES += libcrypt/crypt-sha256.c
libcpukit_a_SOURCES += libcrypt/crypt-sha512.c
libcpukit_a_SOURCES += libcrypt/misc.c
libcpukit_a_SOURCES += libcsupport/src/access.c
libcpukit_a_SOURCES += libcsupport/src/arc4random_getentropy_fail.c
libcpukit_a_SOURCES += libcsupport/src/__assert.c
libcpukit_a_SOURCES += libcsupport/src/assoc32tostring.c
libcpukit_a_SOURCES += libcsupport/src/assoclocalbyname.c
libcpukit_a_SOURCES += libcsupport/src/assoclocalbyremotebitfield.c
libcpukit_a_SOURCES += libcsupport/src/assoclocalbyremote.c
libcpukit_a_SOURCES += libcsupport/src/assocnamebad.c
libcpukit_a_SOURCES += libcsupport/src/assocnamebylocalbitfield.c
libcpukit_a_SOURCES += libcsupport/src/assocnamebylocal.c
libcpukit_a_SOURCES += libcsupport/src/assocnamebyremotebitfield.c
libcpukit_a_SOURCES += libcsupport/src/assocnamebyremote.c
libcpukit_a_SOURCES += libcsupport/src/assocptrbylocal.c
libcpukit_a_SOURCES += libcsupport/src/assocptrbyname.c
libcpukit_a_SOURCES += libcsupport/src/assocptrbyremote.c
libcpukit_a_SOURCES += libcsupport/src/assocremotebylocalbitfield.c
libcpukit_a_SOURCES += libcsupport/src/assocremotebylocal.c
libcpukit_a_SOURCES += libcsupport/src/assocremotebyname.c
libcpukit_a_SOURCES += libcsupport/src/assocthreadstatestostring.c
libcpukit_a_SOURCES += libcsupport/src/base_fs.c
libcpukit_a_SOURCES += libcsupport/src/cachealignedalloc.c
libcpukit_a_SOURCES += libcsupport/src/cachecoherentalloc.c
libcpukit_a_SOURCES += libcsupport/src/calloc.c
libcpukit_a_SOURCES += libcsupport/src/_calloc_r.c
libcpukit_a_SOURCES += libcsupport/src/cfgetispeed.c
libcpukit_a_SOURCES += libcsupport/src/cfgetospeed.c
libcpukit_a_SOURCES += libcsupport/src/cfmakeraw.c
libcpukit_a_SOURCES += libcsupport/src/cfmakesane.c
libcpukit_a_SOURCES += libcsupport/src/cfsetispeed.c
libcpukit_a_SOURCES += libcsupport/src/cfsetospeed.c
libcpukit_a_SOURCES += libcsupport/src/cfsetspeed.c
libcpukit_a_SOURCES += libcsupport/src/chdir.c
libcpukit_a_SOURCES += libcsupport/src/chmod.c
libcpukit_a_SOURCES += libcsupport/src/chown.c
libcpukit_a_SOURCES += libcsupport/src/chroot.c
libcpukit_a_SOURCES += libcsupport/src/clock.c
libcpukit_a_SOURCES += libcsupport/src/clonenode.c
libcpukit_a_SOURCES += libcsupport/src/close.c
libcpukit_a_SOURCES += libcsupport/src/consolesimple.c
libcpukit_a_SOURCES += libcsupport/src/consolesimpleread.c
libcpukit_a_SOURCES += libcsupport/src/consolesimpletask.c
libcpukit_a_SOURCES += libcsupport/src/ctermid.c
libcpukit_a_SOURCES += libcsupport/src/dup2.c
libcpukit_a_SOURCES += libcsupport/src/dup.c
libcpukit_a_SOURCES += libcsupport/src/error.c
libcpukit_a_SOURCES += libcsupport/src/fchdir.c
libcpukit_a_SOURCES += libcsupport/src/fchmod.c
libcpukit_a_SOURCES += libcsupport/src/fchown.c
libcpukit_a_SOURCES += libcsupport/src/fcntl.c
libcpukit_a_SOURCES += libcsupport/src/fdatasync.c
libcpukit_a_SOURCES += libcsupport/src/flockfile.c
libcpukit_a_SOURCES += libcsupport/src/fpathconf.c
libcpukit_a_SOURCES += libcsupport/src/free.c
libcpukit_a_SOURCES += libcsupport/src/freenode.c
libcpukit_a_SOURCES += libcsupport/src/_free_r.c
libcpukit_a_SOURCES += libcsupport/src/fstat.c
libcpukit_a_SOURCES += libcsupport/src/fsync.c
libcpukit_a_SOURCES += libcsupport/src/ftruncate.c
libcpukit_a_SOURCES += libcsupport/src/ftrylockfile.c
libcpukit_a_SOURCES += libcsupport/src/funlockfile.c
libcpukit_a_SOURCES += libcsupport/src/getchark.c
libcpukit_a_SOURCES += libcsupport/src/getcwd.c
libcpukit_a_SOURCES += libcsupport/src/getdents.c
libcpukit_a_SOURCES += libcsupport/src/getegid.c
libcpukit_a_SOURCES += libcsupport/src/geteuid.c
libcpukit_a_SOURCES += libcsupport/src/getgid.c
libcpukit_a_SOURCES += libcsupport/src/getgrent.c
libcpukit_a_SOURCES += libcsupport/src/getgrnam.c
libcpukit_a_SOURCES += libcsupport/src/getgroups.c
libcpukit_a_SOURCES += libcsupport/src/getlogin.c
libcpukit_a_SOURCES += libcsupport/src/getpagesize.c
libcpukit_a_SOURCES += libcsupport/src/getpgrp.c
libcpukit_a_SOURCES += libcsupport/src/__getpid.c
libcpukit_a_SOURCES += libcsupport/src/getpid.c
libcpukit_a_SOURCES += libcsupport/src/getppid.c
libcpukit_a_SOURCES += libcsupport/src/getpwent.c
libcpukit_a_SOURCES += libcsupport/src/getrusage.c
libcpukit_a_SOURCES += libcsupport/src/__gettod.c
libcpukit_a_SOURCES += libcsupport/src/getuid.c
libcpukit_a_SOURCES += libcsupport/src/gxx_wrappers.c
libcpukit_a_SOURCES += libcsupport/src/ioctl.c
libcpukit_a_SOURCES += libcsupport/src/isatty.c
libcpukit_a_SOURCES += libcsupport/src/isatty_r.c
libcpukit_a_SOURCES += libcsupport/src/issetugid.c
libcpukit_a_SOURCES += libcsupport/src/kill_noposix.c
libcpukit_a_SOURCES += libcsupport/src/lchown.c
libcpukit_a_SOURCES += libcsupport/src/libio.c
libcpukit_a_SOURCES += libcsupport/src/libio_exit.c
libcpukit_a_SOURCES += libcsupport/src/libio_init.c
libcpukit_a_SOURCES += libcsupport/src/link.c
libcpukit_a_SOURCES += libcsupport/src/lseek.c
libcpukit_a_SOURCES += libcsupport/src/lstat.c
libcpukit_a_SOURCES += libcsupport/src/malloc.c
libcpukit_a_SOURCES += libcsupport/src/malloc_deferred.c
libcpukit_a_SOURCES += libcsupport/src/malloc_dirtier.c
libcpukit_a_SOURCES += libcsupport/src/mallocfreespace.c
libcpukit_a_SOURCES += libcsupport/src/mallocgetheapptr.c
libcpukit_a_SOURCES += libcsupport/src/mallocinfo.c
libcpukit_a_SOURCES += libcsupport/src/malloc_initialize.c
libcpukit_a_SOURCES += libcsupport/src/_malloc_r.c
libcpukit_a_SOURCES += libcsupport/src/mallocsetheapptr.c
libcpukit_a_SOURCES += libcsupport/src/malloc_walk.c
libcpukit_a_SOURCES += libcsupport/src/mkdir.c
libcpukit_a_SOURCES += libcsupport/src/mkfifo.c
libcpukit_a_SOURCES += libcsupport/src/mknod.c
libcpukit_a_SOURCES += libcsupport/src/mount.c
libcpukit_a_SOURCES += libcsupport/src/mount-mgr.c
libcpukit_a_SOURCES += libcsupport/src/mount-mktgt.c
libcpukit_a_SOURCES += libcsupport/src/newlibc_exit.c
libcpukit_a_SOURCES += libcsupport/src/newlibc_reent.c
libcpukit_a_SOURCES += libcsupport/src/open.c
libcpukit_a_SOURCES += libcsupport/src/open_dev_console.c
libcpukit_a_SOURCES += libcsupport/src/pathconf.c
libcpukit_a_SOURCES += libcsupport/src/posix_devctl.c
libcpukit_a_SOURCES += libcsupport/src/posix_memalign.c
libcpukit_a_SOURCES += libcsupport/src/printerfprintfputc.c
libcpukit_a_SOURCES += libcsupport/src/printertask.c
libcpukit_a_SOURCES += libcsupport/src/printf_plugin.c
libcpukit_a_SOURCES += libcsupport/src/print_fprintf.c
libcpukit_a_SOURCES += libcsupport/src/printk.c
libcpukit_a_SOURCES += libcsupport/src/printk_plugin.c
libcpukit_a_SOURCES += libcsupport/src/print_printf.c
libcpukit_a_SOURCES += libcsupport/src/privateenv.c
libcpukit_a_SOURCES += libcsupport/src/putk.c
libcpukit_a_SOURCES += libcsupport/src/pwdgrp.c
libcpukit_a_SOURCES += libcsupport/src/read.c
libcpukit_a_SOURCES += libcsupport/src/readdir_r.c
libcpukit_a_SOURCES += libcsupport/src/readlink.c
libcpukit_a_SOURCES += libcsupport/src/readv.c
libcpukit_a_SOURCES += libcsupport/src/realloc.c
libcpukit_a_SOURCES += libcsupport/src/_realloc_r.c
libcpukit_a_SOURCES += libcsupport/src/realpath.c
libcpukit_a_SOURCES += libcsupport/src/_rename_r.c
libcpukit_a_SOURCES += libcsupport/src/resource_snapshot.c
libcpukit_a_SOURCES += libcsupport/src/rmdir.c
libcpukit_a_SOURCES += libcsupport/src/rtems_heap_extend.c
libcpukit_a_SOURCES += libcsupport/src/rtems_heap_extend_via_sbrk.c
libcpukit_a_SOURCES += libcsupport/src/rtems_heap_greedy.c
libcpukit_a_SOURCES += libcsupport/src/rtems_heap_null_extend.c
libcpukit_a_SOURCES += libcsupport/src/rtems_memalign.c
libcpukit_a_SOURCES += libcsupport/src/rtems_mkdir.c
libcpukit_a_SOURCES += libcsupport/src/rtems_putc.c
libcpukit_a_SOURCES += libcsupport/src/setegid.c
libcpukit_a_SOURCES += libcsupport/src/seteuid.c
libcpukit_a_SOURCES += libcsupport/src/setgid.c
libcpukit_a_SOURCES += libcsupport/src/setgroups.c
libcpukit_a_SOURCES += libcsupport/src/setpgid.c
libcpukit_a_SOURCES += libcsupport/src/setsid.c
libcpukit_a_SOURCES += libcsupport/src/setuid.c
libcpukit_a_SOURCES += libcsupport/src/stat.c
libcpukit_a_SOURCES += libcsupport/src/statvfs.c
libcpukit_a_SOURCES += libcsupport/src/strlcat.c
libcpukit_a_SOURCES += libcsupport/src/strlcpy.c
libcpukit_a_SOURCES += libcsupport/src/sup_fs_check_permissions.c
libcpukit_a_SOURCES += libcsupport/src/sup_fs_deviceio.c
libcpukit_a_SOURCES += libcsupport/src/sup_fs_eval_path.c
libcpukit_a_SOURCES += libcsupport/src/sup_fs_eval_path_generic.c
libcpukit_a_SOURCES += libcsupport/src/sup_fs_exist_in_same_instance.c
libcpukit_a_SOURCES += libcsupport/src/sup_fs_location.c
libcpukit_a_SOURCES += libcsupport/src/sup_fs_mount_iterate.c
libcpukit_a_SOURCES += libcsupport/src/sup_fs_next_token.c
libcpukit_a_SOURCES += libcsupport/src/symlink.c
libcpukit_a_SOURCES += libcsupport/src/sync.c
libcpukit_a_SOURCES += libcsupport/src/tcdrain.c
libcpukit_a_SOURCES += libcsupport/src/tcflow.c
libcpukit_a_SOURCES += libcsupport/src/tcflush.c
libcpukit_a_SOURCES += libcsupport/src/tcgetattr.c
libcpukit_a_SOURCES += libcsupport/src/tcgetpgrp.c
libcpukit_a_SOURCES += libcsupport/src/tcsendbreak.c
libcpukit_a_SOURCES += libcsupport/src/tcsetattr.c
libcpukit_a_SOURCES += libcsupport/src/tcsetpgrp.c
libcpukit_a_SOURCES += libcsupport/src/termios_baud2index.c
libcpukit_a_SOURCES += libcsupport/src/termios_baud2num.c
libcpukit_a_SOURCES += libcsupport/src/termios_baudtable.c
libcpukit_a_SOURCES += libcsupport/src/termios.c
libcpukit_a_SOURCES += libcsupport/src/termiosinitialize.c
libcpukit_a_SOURCES += libcsupport/src/termios_num2baud.c
libcpukit_a_SOURCES += libcsupport/src/termios_setbestbaud.c
libcpukit_a_SOURCES += libcsupport/src/termios_setinitialbaud.c
libcpukit_a_SOURCES += libcsupport/src/__times.c
libcpukit_a_SOURCES += libcsupport/src/truncate.c
libcpukit_a_SOURCES += libcsupport/src/ttyname.c
libcpukit_a_SOURCES += libcsupport/src/uenvgetgroups.c
libcpukit_a_SOURCES += libcsupport/src/umask.c
libcpukit_a_SOURCES += libcsupport/src/unlink.c
libcpukit_a_SOURCES += libcsupport/src/unmount.c
libcpukit_a_SOURCES += libcsupport/src/__usrenv.c
libcpukit_a_SOURCES += libcsupport/src/utime.c
libcpukit_a_SOURCES += libcsupport/src/utimes.c
libcpukit_a_SOURCES += libcsupport/src/utsname.c
libcpukit_a_SOURCES += libcsupport/src/vprintk.c
libcpukit_a_SOURCES += libcsupport/src/write.c
libcpukit_a_SOURCES += libcsupport/src/write_r.c
libcpukit_a_SOURCES += libcsupport/src/writev.c
libcpukit_a_SOURCES += libfs/src/defaults/default_are_nodes_equal.c
libcpukit_a_SOURCES += libfs/src/defaults/default_chown.c
libcpukit_a_SOURCES += libfs/src/defaults/default_clone.c
libcpukit_a_SOURCES += libfs/src/defaults/default_close.c
libcpukit_a_SOURCES += libfs/src/defaults/default_eval_path.c
libcpukit_a_SOURCES += libfs/src/defaults/default_fchmod.c
libcpukit_a_SOURCES += libfs/src/defaults/default_fcntl.c
libcpukit_a_SOURCES += libfs/src/defaults/default_freenode.c
libcpukit_a_SOURCES += libfs/src/defaults/default_fstat.c
libcpukit_a_SOURCES += libfs/src/defaults/default_fsunmount.c
libcpukit_a_SOURCES += libfs/src/defaults/default_fsync.c
libcpukit_a_SOURCES += libfs/src/defaults/default_fsync_success.c
libcpukit_a_SOURCES += libfs/src/defaults/default_ftruncate.c
libcpukit_a_SOURCES += libfs/src/defaults/default_ftruncate_directory.c
libcpukit_a_SOURCES += libfs/src/defaults/default_handlers.c
libcpukit_a_SOURCES += libfs/src/defaults/default_ioctl.c
libcpukit_a_SOURCES += libfs/src/defaults/default_kqfilter.c
libcpukit_a_SOURCES += libfs/src/defaults/default_link.c
libcpukit_a_SOURCES += libfs/src/defaults/default_lock_and_unlock.c
libcpukit_a_SOURCES += libfs/src/defaults/default_lseek.c
libcpukit_a_SOURCES += libfs/src/defaults/default_lseek_directory.c
libcpukit_a_SOURCES += libfs/src/defaults/default_lseek_file.c
libcpukit_a_SOURCES += libfs/src/defaults/default_mknod.c
libcpukit_a_SOURCES += libfs/src/defaults/default_mmap.c
libcpukit_a_SOURCES += libfs/src/defaults/default_mount.c
libcpukit_a_SOURCES += libfs/src/defaults/default_open.c
libcpukit_a_SOURCES += libfs/src/defaults/default_ops.c
libcpukit_a_SOURCES += libfs/src/defaults/default_poll.c
libcpukit_a_SOURCES += libfs/src/defaults/default_read.c
libcpukit_a_SOURCES += libfs/src/defaults/default_readlink.c
libcpukit_a_SOURCES += libfs/src/defaults/default_readv.c
libcpukit_a_SOURCES += libfs/src/defaults/default_rename.c
libcpukit_a_SOURCES += libfs/src/defaults/default_rmnod.c
libcpukit_a_SOURCES += libfs/src/defaults/default_statvfs.c
libcpukit_a_SOURCES += libfs/src/defaults/default_symlink.c
libcpukit_a_SOURCES += libfs/src/defaults/default_unmount.c
libcpukit_a_SOURCES += libfs/src/defaults/default_utime.c
libcpukit_a_SOURCES += libfs/src/defaults/default_write.c
libcpukit_a_SOURCES += libfs/src/defaults/default_writev.c
libcpukit_a_SOURCES += libfs/src/devfs/devclose.c
libcpukit_a_SOURCES += libfs/src/devfs/devfs_eval.c
libcpukit_a_SOURCES += libfs/src/devfs/devfs_init.c
libcpukit_a_SOURCES += libfs/src/devfs/devfs_mknod.c
libcpukit_a_SOURCES += libfs/src/devfs/devfs_show.c
libcpukit_a_SOURCES += libfs/src/devfs/devioctl.c
libcpukit_a_SOURCES += libfs/src/devfs/devopen.c
libcpukit_a_SOURCES += libfs/src/devfs/devread.c
libcpukit_a_SOURCES += libfs/src/devfs/devstat.c
libcpukit_a_SOURCES += libfs/src/devfs/devwrite.c
libcpukit_a_SOURCES += libfs/src/imfs/deviceio.c
libcpukit_a_SOURCES += libfs/src/imfs/imfs_chown.c
libcpukit_a_SOURCES += libfs/src/imfs/imfs_config.c
libcpukit_a_SOURCES += libfs/src/imfs/imfs_creat.c
libcpukit_a_SOURCES += libfs/src/imfs/imfs_dir.c
libcpukit_a_SOURCES += libfs/src/imfs/imfs_dir_default.c
libcpukit_a_SOURCES += libfs/src/imfs/imfs_dir_minimal.c
libcpukit_a_SOURCES += libfs/src/imfs/imfs_eval.c
libcpukit_a_SOURCES += libfs/src/imfs/imfs_fchmod.c
libcpukit_a_SOURCES += libfs/src/imfs/imfs_fifo.c
libcpukit_a_SOURCES += libfs/src/imfs/imfs_fsunmount.c
libcpukit_a_SOURCES += libfs/src/imfs/imfs_handlers_device.c
libcpukit_a_SOURCES += libfs/src/imfs/imfs_init.c
libcpukit_a_SOURCES += libfs/src/imfs/imfs_initsupp.c
libcpukit_a_SOURCES += libfs/src/imfs/imfs_linfile.c
libcpukit_a_SOURCES += libfs/src/imfs/imfs_link.c
libcpukit_a_SOURCES += libfs/src/imfs/imfs_load_tar.c
libcpukit_a_SOURCES += libfs/src/imfs/imfs_make_generic_node.c
libcpukit_a_SOURCES += libfs/src/imfs/imfs_memfile.c
libcpukit_a_SOURCES += libfs/src/imfs/imfs_mknod.c
libcpukit_a_SOURCES += libfs/src/imfs/imfs_mount.c
libcpukit_a_SOURCES += libfs/src/imfs/imfs_node.c
libcpukit_a_SOURCES += libfs/src/imfs/imfs_rename.c
libcpukit_a_SOURCES += libfs/src/imfs/imfs_rmnod.c
libcpukit_a_SOURCES += libfs/src/imfs/imfs_stat.c
libcpukit_a_SOURCES += libfs/src/imfs/imfs_stat_file.c
libcpukit_a_SOURCES += libfs/src/imfs/imfs_symlink.c
libcpukit_a_SOURCES += libfs/src/imfs/imfs_unmount.c
libcpukit_a_SOURCES += libfs/src/imfs/imfs_utime.c
libcpukit_a_SOURCES += libfs/src/imfs/ioman.c
libcpukit_a_SOURCES += libfs/src/pipe/fifo.c
libcpukit_a_SOURCES += libfs/src/pipe/pipe.c
libcpukit_a_SOURCES += libfs/src/rfs/rtems-rfs-bitmaps.c
libcpukit_a_SOURCES += libfs/src/rfs/rtems-rfs-block.c
libcpukit_a_SOURCES += libfs/src/rfs/rtems-rfs-buffer-bdbuf.c
libcpukit_a_SOURCES += libfs/src/rfs/rtems-rfs-buffer.c
libcpukit_a_SOURCES += libfs/src/rfs/rtems-rfs-dir.c
libcpukit_a_SOURCES += libfs/src/rfs/rtems-rfs-dir-hash.c
libcpukit_a_SOURCES += libfs/src/rfs/rtems-rfs-file.c
libcpukit_a_SOURCES += libfs/src/rfs/rtems-rfs-file-system.c
libcpukit_a_SOURCES += libfs/src/rfs/rtems-rfs-format.c
libcpukit_a_SOURCES += libfs/src/rfs/rtems-rfs-group.c
libcpukit_a_SOURCES += libfs/src/rfs/rtems-rfs-inode.c
libcpukit_a_SOURCES += libfs/src/rfs/rtems-rfs-link.c
libcpukit_a_SOURCES += libfs/src/rfs/rtems-rfs-mutex.c
libcpukit_a_SOURCES += libfs/src/rfs/rtems-rfs-rtems.c
libcpukit_a_SOURCES += libfs/src/rfs/rtems-rfs-rtems-dev.c
libcpukit_a_SOURCES += libfs/src/rfs/rtems-rfs-rtems-dir.c
libcpukit_a_SOURCES += libfs/src/rfs/rtems-rfs-rtems-file.c
libcpukit_a_SOURCES += libfs/src/rfs/rtems-rfs-rtems-utils.c
libcpukit_a_SOURCES += libfs/src/rfs/rtems-rfs-shell.c
libcpukit_a_SOURCES += libfs/src/rfs/rtems-rfs-trace.c
libcpukit_a_SOURCES += sapi/src/chainappendnotify.c
libcpukit_a_SOURCES += sapi/src/chaingetnotify.c
libcpukit_a_SOURCES += sapi/src/chaingetwait.c
libcpukit_a_SOURCES += sapi/src/chainprependnotify.c
libcpukit_a_SOURCES += sapi/src/chainprotected.c
libcpukit_a_SOURCES += sapi/src/cpucounterconverter.c
libcpukit_a_SOURCES += sapi/src/delaynano.c
libcpukit_a_SOURCES += sapi/src/delayticks.c
libcpukit_a_SOURCES += sapi/src/exinit.c
libcpukit_a_SOURCES += sapi/src/exshutdown.c
libcpukit_a_SOURCES += sapi/src/extension.c
libcpukit_a_SOURCES += sapi/src/extensioncreate.c
libcpukit_a_SOURCES += sapi/src/extensiondelete.c
libcpukit_a_SOURCES += sapi/src/extensionident.c
libcpukit_a_SOURCES += sapi/src/fatal.c
libcpukit_a_SOURCES += sapi/src/fatalsrctext.c
libcpukit_a_SOURCES += sapi/src/getversionstring.c
libcpukit_a_SOURCES += sapi/src/interrtext.c
libcpukit_a_SOURCES += sapi/src/io.c
libcpukit_a_SOURCES += sapi/src/ioclose.c
libcpukit_a_SOURCES += sapi/src/iocontrol.c
libcpukit_a_SOURCES += sapi/src/ioinitialize.c
libcpukit_a_SOURCES += sapi/src/ioopen.c
libcpukit_a_SOURCES += sapi/src/ioread.c
libcpukit_a_SOURCES += sapi/src/ioregisterdriver.c
libcpukit_a_SOURCES += sapi/src/iounregisterdriver.c
libcpukit_a_SOURCES += sapi/src/iowrite.c
libcpukit_a_SOURCES += sapi/src/panic.c
libcpukit_a_SOURCES += sapi/src/posixapi.c
libcpukit_a_SOURCES += sapi/src/profilingiterate.c
libcpukit_a_SOURCES += sapi/src/profilingreportxml.c
libcpukit_a_SOURCES += sapi/src/rbheap.c
libcpukit_a_SOURCES += sapi/src/rbtree.c
libcpukit_a_SOURCES += sapi/src/rbtreefind.c
libcpukit_a_SOURCES += sapi/src/sapirbtreeinsert.c
libcpukit_a_SOURCES += sapi/src/tcsimpleinstall.c
libcpukit_a_SOURCES += sapi/src/version.c

if LIBDL

libcpukit_a_SOURCES += libdl/dlfcn.c
libcpukit_a_SOURCES += libdl/dlfcn-shell.c
libcpukit_a_SOURCES += libdl/fastlz.c
libcpukit_a_SOURCES += libdl/rap.c
libcpukit_a_SOURCES += libdl/rap-shell.c
libcpukit_a_SOURCES += libdl/rtl-allocator.c
libcpukit_a_SOURCES += libdl/rtl-alloc-heap.c
libcpukit_a_SOURCES += libdl/rtl.c
libcpukit_a_SOURCES += libdl/rtl-chain-iterator.c
libcpukit_a_SOURCES += libdl/rtl-debugger.c
libcpukit_a_SOURCES += libdl/rtl-elf.c
libcpukit_a_SOURCES += libdl/rtl-error.c
libcpukit_a_SOURCES += libdl/rtl-find-file.c
libcpukit_a_SOURCES += libdl/rtl-mdreloc-@RTEMS_CPU@.c
libcpukit_a_SOURCES += libdl/rtl-obj.c
libcpukit_a_SOURCES += libdl/rtl-obj-cache.c
libcpukit_a_SOURCES += libdl/rtl-obj-comp.c
libcpukit_a_SOURCES += libdl/rtl-rap.c
libcpukit_a_SOURCES += libdl/rtl-shell.c
libcpukit_a_SOURCES += libdl/rtl-string.c
libcpukit_a_SOURCES += libdl/rtl-sym.c
libcpukit_a_SOURCES += libdl/rtl-trace.c
libcpukit_a_SOURCES += libdl/rtl-unresolved.c
libcpukit_a_SOURCES += libdl/rtl-unwind-dw2.c

endif

if LIBDOSFS

libcpukit_a_SOURCES += libfs/src/dosfs/fat.c
libcpukit_a_SOURCES += libfs/src/dosfs/fat_fat_operations.c
libcpukit_a_SOURCES += libfs/src/dosfs/fat_file.c
libcpukit_a_SOURCES += libfs/src/dosfs/msdos_conv.c
libcpukit_a_SOURCES += libfs/src/dosfs/msdos_conv_default.c
libcpukit_a_SOURCES += libfs/src/dosfs/msdos_conv_utf8.c
libcpukit_a_SOURCES += libfs/src/dosfs/msdos_create.c
libcpukit_a_SOURCES += libfs/src/dosfs/msdos_dir.c
libcpukit_a_SOURCES += libfs/src/dosfs/msdos_eval.c
libcpukit_a_SOURCES += libfs/src/dosfs/msdos_file.c
libcpukit_a_SOURCES += libfs/src/dosfs/msdos_format.c
libcpukit_a_SOURCES += libfs/src/dosfs/msdos_free.c
libcpukit_a_SOURCES += libfs/src/dosfs/msdos_fsunmount.c
libcpukit_a_SOURCES += libfs/src/dosfs/msdos_handlers_dir.c
libcpukit_a_SOURCES += libfs/src/dosfs/msdos_handlers_file.c
libcpukit_a_SOURCES += libfs/src/dosfs/msdos_init.c
libcpukit_a_SOURCES += libfs/src/dosfs/msdos_initsupp.c
libcpukit_a_SOURCES += libfs/src/dosfs/msdos_misc.c
libcpukit_a_SOURCES += libfs/src/dosfs/msdos_mknod.c
libcpukit_a_SOURCES += libfs/src/dosfs/msdos_rename.c
libcpukit_a_SOURCES += libfs/src/dosfs/msdos_rmnod.c
libcpukit_a_SOURCES += libfs/src/dosfs/msdos_statvfs.c

endif

if LIBDRVMGR

libcpukit_a_SOURCES += libdrvmgr/drvmgr_by_id.c
libcpukit_a_SOURCES += libdrvmgr/drvmgr_by_name.c
libcpukit_a_SOURCES += libdrvmgr/drvmgr.c
libcpukit_a_SOURCES += libdrvmgr/drvmgr_dev_by_name.c
libcpukit_a_SOURCES += libdrvmgr/drvmgr_drvinf.c
libcpukit_a_SOURCES += libdrvmgr/drvmgr_for_each_dev.c
libcpukit_a_SOURCES += libdrvmgr/drvmgr_for_each_list_dev.c
libcpukit_a_SOURCES += libdrvmgr/drvmgr_func.c
libcpukit_a_SOURCES += libdrvmgr/drvmgr_func_call.c
libcpukit_a_SOURCES += libdrvmgr/drvmgr_init.c
libcpukit_a_SOURCES += libdrvmgr/drvmgr_list.c
libcpukit_a_SOURCES += libdrvmgr/drvmgr_lock.c
libcpukit_a_SOURCES += libdrvmgr/drvmgr_print.c
libcpukit_a_SOURCES += libdrvmgr/drvmgr_res.c
libcpukit_a_SOURCES += libdrvmgr/drvmgr_rw.c
libcpukit_a_SOURCES += libdrvmgr/drvmgr_translate.c
libcpukit_a_SOURCES += libdrvmgr/drvmgr_translate_check.c
libcpukit_a_SOURCES += libdrvmgr/drvmgr_unregister.c

endif

if LIBGNAT

libcpukit_a_SOURCES += libgnat/ada_intrsupp.c
libcpukit_a_SOURCES += libgnat/adasupp.c

endif

#
# Create a new Version VC Key header if the VC state has changed.
#
stamp_vc_key = stamp-vc-key

BUILT_SOURCES = version-vc-key.h

.PHONY: generate-vc-key

generate-vc-key:
	@+current_vc_key=""; \
	if test -f $(stamp_vc_key); then \
	 current_vc_key=`cat $(stamp_vc_key)`; \
	fi; \
	vc_key=`$(top_srcdir)/vc-key.sh $(top_srcdir) $$current_vc_key`; \
	if test "$$vc_key" != "matches"; then \
	 echo "Generating version-vc-key.h"; \
	 if test "$$vc_key" == "release"; then \
	  vc_header_key="\/\* No version control key found; release\? \*\/"; \
	 else \
	  vc_header_key="#define RTEMS_VERSION_VC_KEY \"$$vc_key\""; \
	 fi; \
	 cat $(top_srcdir)/version-vc-key.h.in | \
	  sed -e "s/@VERSION_VC_KEY@/$$vc_header_key/g" > version-vc-key.h; \
	 echo "$$vc_key" > $(stamp_vc_key); \
	fi

version-vc-key.h: generate-vc-key

$(top_srcdir)/sapi/src/version.c: version-vc-key.h

all-local: generate-vc-key

# librtemscpu
_SUBDIRS = . score rtems posix
_SUBDIRS += libnetworking librpc
_SUBDIRS += libpci
_SUBDIRS += libi2c
_SUBDIRS += libmisc
_SUBDIRS += libmd
_SUBDIRS += libstdthreads
_SUBDIRS += wrapup

# other libraries
_SUBDIRS += zlib
_SUBDIRS += telnetd
_SUBDIRS += pppd
_SUBDIRS += mghttpd

project_lib_LIBRARIES += libftpd.a

$(PROJECT_LIB)/libftpd.a: libftpd.a
	$(INSTALL_DATA) $< $(PROJECT_LIB)/libftpd.a
TMPINSTALL_FILES += $(PROJECT_LIB)/libftpd.a

libftpd_a_SOURCES =
libftpd_a_SOURCES += ftpd/ftpd.c
libftpd_a_SOURCES += ftpd/ftpd-init.c

if LIBDEBUGGER

project_lib_LIBRARIES += libdebugger.a

$(PROJECT_LIB)/libdebugger.a: libdebugger.a
	$(INSTALL_DATA) $< $(PROJECT_LIB)/libdebugger.a
TMPINSTALL_FILES += $(PROJECT_LIB)/libdebugger.a

libdebugger_a_SOURCES =
libdebugger_a_SOURCES += libdebugger/rtems-debugger-block.c
libdebugger_a_SOURCES += libdebugger/rtems-debugger-cmd.c
libdebugger_a_SOURCES += libdebugger/rtems-debugger-remote.c
libdebugger_a_SOURCES += libdebugger/rtems-debugger-remote-tcp.c
libdebugger_a_SOURCES += libdebugger/rtems-debugger-@RTEMS_CPU@.c
libdebugger_a_SOURCES += libdebugger/rtems-debugger-server.c
libdebugger_a_SOURCES += libdebugger/rtems-debugger-target.c
libdebugger_a_SOURCES += libdebugger/rtems-debugger-threads.c

endif

project_lib_LIBRARIES += libjffs2.a

$(PROJECT_LIB)/libjffs2.a: libjffs2.a
	$(INSTALL_DATA) $< $(PROJECT_LIB)/libjffs2.a
TMPINSTALL_FILES += $(PROJECT_LIB)/libjffs2.a

libjffs2_a_SOURCES =
libjffs2_a_SOURCES += libfs/src/jffs2/src/build.c
libjffs2_a_SOURCES += libfs/src/jffs2/src/compat-crc32.c
libjffs2_a_SOURCES += libfs/src/jffs2/src/compr.c
libjffs2_a_SOURCES += libfs/src/jffs2/src/compr_rtime.c
libjffs2_a_SOURCES += libfs/src/jffs2/src/compr_zlib.c
libjffs2_a_SOURCES += libfs/src/jffs2/src/debug.c
libjffs2_a_SOURCES += libfs/src/jffs2/src/dir-rtems.c
libjffs2_a_SOURCES += libfs/src/jffs2/src/erase.c
libjffs2_a_SOURCES += libfs/src/jffs2/src/flashio.c
libjffs2_a_SOURCES += libfs/src/jffs2/src/fs-rtems.c
libjffs2_a_SOURCES += libfs/src/jffs2/src/gc.c
libjffs2_a_SOURCES += libfs/src/jffs2/src/malloc-rtems.c
libjffs2_a_SOURCES += libfs/src/jffs2/src/nodelist.c
libjffs2_a_SOURCES += libfs/src/jffs2/src/nodemgmt.c
libjffs2_a_SOURCES += libfs/src/jffs2/src/read.c
libjffs2_a_SOURCES += libfs/src/jffs2/src/readinode.c
libjffs2_a_SOURCES += libfs/src/jffs2/src/scan.c
libjffs2_a_SOURCES += libfs/src/jffs2/src/write.c
libjffs2_a_CFLAGS =
libjffs2_a_CFLAGS += -Wno-pointer-sign
libjffs2_a_CPPFLAGS =
libjffs2_a_CPPFLAGS += $(AM_CPPFLAGS)
libjffs2_a_CPPFLAGS += -I$(srcdir)/libfs/src/jffs2/include

if LIBNETWORKING

project_lib_LIBRARIES += libnfs.a

$(PROJECT_LIB)/libnfs.a: libnfs.a
	$(INSTALL_DATA) $< $(PROJECT_LIB)/libnfs.a
TMPINSTALL_FILES += $(PROJECT_LIB)/libnfs.a

libnfs_a_SOURCES =
libnfs_a_SOURCES += libfs/src/nfsclient/proto/mount_prot_xdr.c
libnfs_a_SOURCES += libfs/src/nfsclient/proto/nfs_prot_xdr.c
libnfs_a_SOURCES += libfs/src/nfsclient/src/nfs.c
libnfs_a_SOURCES += libfs/src/nfsclient/src/rpcio.c
libnfs_a_SOURCES += libfs/src/nfsclient/src/sock_mbuf.c
libnfs_a_SOURCES += libfs/src/nfsclient/src/xdr_mbuf.c

endif

include $(top_srcdir)/automake/subdirs.am
include $(top_srcdir)/automake/local.am
include $(srcdir)/headers.am
